@@ -1202,6 +1202,32 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
+name|executeMethod
+argument_list|(
+name|createMethod
+argument_list|(
+name|request
+argument_list|)
+argument_list|,
+name|processor
+argument_list|)
+return|;
+block|}
+DECL|method|createMethod
+specifier|protected
+name|HttpRequestBase
+name|createMethod
+parameter_list|(
+specifier|final
+name|SolrRequest
+name|request
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
 name|HttpRequestBase
 name|method
 init|=
@@ -2169,6 +2195,28 @@ name|ex
 argument_list|)
 throw|;
 block|}
+return|return
+name|method
+return|;
+block|}
+DECL|method|executeMethod
+specifier|protected
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|executeMethod
+parameter_list|(
+name|HttpRequestBase
+name|method
+parameter_list|,
+specifier|final
+name|ResponseParser
+name|processor
+parameter_list|)
+throws|throws
+name|SolrServerException
+block|{
 comment|// XXX client already has this set, is this needed?
 name|method
 operator|.
